--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ section {
     height: 100%;
     position: relative;
     background-size: cover;
-    background-image: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.setaswall.com%2Fwp-content%2Fuploads%2F2019%2F08%2FWhatsapp-Wallpaper-111.jpg&f=1&nofb=1');
+    background-image: url('https://66.media.tumblr.com/53a35e7ed66f3159e01f3663af30706b/tumblr_ouztgbH0CG1vj8v9mo1_1280.png');
     background-size: cover;
     background-position: center;
 }
